# solana-private-votes

./: .gitignore  Anchor.toml  LICENSE  PRIVACY_LAYER_SPEC.md  README.md  TEST_SUMMARY.md  package.json
docs/: DEMO.md  HACKATHON_SUBMISSION.md  PROJECT_SUMMARY.md  QUICKSTART.md
docs.arcium.com/: developers.html  index.html  sitemap.xml
docs.arcium.com/arx-nodes/: configuration-and-security.html  overview.html  performance-and-incentives.html
docs.arcium.com/clusters/: cluster-forking-and-migration.html  incentivization.html  node-priority-list-and-alternative-selection-criteria.html  overview.html  permissioned-clusters.html  sybil-resistance.html
docs.arcium.com/computations/: censorship-resistance-and-fault-handling.html  computation-tasks.html  defining-and-commissioning-computations.html  lifecycle-of-an-arcium-computation.html  pricing-and-incentives.html
docs.arcium.com/developers/: arcis.html  callback-server.html  program.html  (+9 more)
examples/: simple-vote.ts
privacy-layer/: Cargo.toml
privacy-layer/crates/crypto/: Cargo.toml
privacy-layer/crates/crypto/src/: commitment.rs  elgamal.rs  errors.rs  nullifier.rs
privacy-layer/programs/privacy-layer/: Cargo.toml
privacy-layer/programs/privacy-layer/src/: lib.rs
privacy-layer/programs/privacy-layer/src/instructions/: cast_encrypted_vote.rs
privacy-layer/programs/privacy-layer/src/state/: encrypted_vote.rs  nullifier_set.rs  private_election.rs
scripts/: benchmark.ts  build.sh  clean.sh  demo.ts  deploy.sh  deploy.ts  generate-keys.ts  setup-election.ts  setup.sh
sdk/: README.md  package.json
tests/: edge-cases.test.ts  privacy-layer.ts
(+64 files in other folders)
